syntax = "proto3";

package duraflow;

// Task lifecycle: PENDING → RUNNING → COMPLETED/FAILED/CANCELLED
enum TaskStatus {
    TASK_STATUS_UNSPECIFIED = 0;
    PENDING = 1;
    RUNNING = 2;
    COMPLETED = 3;
    FAILED = 4;
    CANCELLED = 5;
}

message SubmitTaskRequest {
    string workflow_name = 1;
    bytes input = 2;  // JSON-encoded
}

message SubmitTaskResponse {
    string task_id = 1;
}

message GetTaskStatusRequest {
    string task_id = 1;
}

message GetTaskStatusResponse {
    TaskStatus status = 1;
    bytes output = 2;  // JSON-encoded
    bytes error = 3;   // JSON-encoded
}

message CancelTaskRequest {
    string task_id = 1;
}

message CancelTaskResponse {
    bool success = 1;  // False if already completed/failed
}

// Step operations for memoization and crash recovery
message GetStepRequest {
    string task_id = 1;
    string step_key = 2;
}

message GetStepResponse {
    bool found = 1;
    bool completed = 2;
    bytes output = 3;  // JSON-encoded, only set if completed
}

message CompleteStepRequest {
    string task_id = 1;
    string step_key = 2;
    bytes output = 3;  // JSON-encoded
}

message CompleteStepResponse {
    bool success = 1;
}

message FailStepRequest {
    string task_id = 1;
    string step_key = 2;
    bytes error = 3;  // JSON-encoded
}

message FailStepResponse {
    bool success = 1;
}

// Task queue management
service AgentService {
    rpc SubmitTask(SubmitTaskRequest) returns (SubmitTaskResponse);
    rpc GetTaskStatus(GetTaskStatusRequest) returns (GetTaskStatusResponse);
    rpc CancelTask(CancelTaskRequest) returns (CancelTaskResponse);
    
    // Step operations for SDK crash recovery
    rpc GetStep(GetStepRequest) returns (GetStepResponse);
    rpc CompleteStep(CompleteStepRequest) returns (CompleteStepResponse);
    rpc FailStep(FailStepRequest) returns (FailStepResponse);
}